--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "5.0.1",
     "joi": "^17.5.0",
     "joi-browser": "^13.4.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "5.2.0",
