--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^5.3.2",
     "axios": "^0.24.0",
     "bcrypt": "5.0.1",
+    "framer-motion": "^6.2.8",
     "joi": "^17.5.0",
     "joi-browser": "^13.4.0",
     "jwt-decode": "^3.1.2",
